[gd_scene load_steps=20 format=3 uid="uid://blsf8m0qs5jm4"]

[ext_resource type="Script" path="res://scripts/screens/Board.gd" id="1_ep6k2"]
[ext_resource type="PackedScene" uid="uid://dg60fmrkhhol8" path="res://scenes/ShuffleHand.tscn" id="2_nmow6"]
[ext_resource type="Texture2D" uid="uid://6sgrvnftylt1" path="res://resources/graphics/parchmentAncient.png" id="2_tj5ik"]
[ext_resource type="Texture2D" uid="uid://b717lbi446kis" path="res://resources/graphics/treePines.png" id="3_01pxd"]
[ext_resource type="Texture2D" uid="uid://dmtedmiruervl" path="res://resources/graphics/castle.png" id="3_7evkv"]
[ext_resource type="PackedScene" uid="uid://cu2sfyvc5bcdj" path="res://scenes/Kingdom.tscn" id="3_67vue"]
[ext_resource type="Texture2D" uid="uid://d1kbop457h1bq" path="res://resources/graphics/graveyard.png" id="4_30kf3"]
[ext_resource type="Texture2D" uid="uid://btrupnm15bwo3" path="res://resources/graphics/vulcano.png" id="4_skmt6"]
[ext_resource type="PackedScene" uid="uid://4xuy7wjmcpu8" path="res://scenes/Hand.tscn" id="4_yvn43"]
[ext_resource type="Texture2D" uid="uid://b7v36t2fwfubg" path="res://resources/graphics/towerWatch.png" id="5_jmmp5"]
[ext_resource type="Texture2D" uid="uid://c2x86qts6pyfb" path="res://resources/graphics/rocksMountain.png" id="5_y5oof"]
[ext_resource type="Texture2D" uid="uid://dm2signlo8txa" path="res://resources/graphics/arrowSmall.png" id="9_bd31o"]
[ext_resource type="Texture2D" uid="uid://by672peii71wc" path="res://resources/graphics/tent.png" id="10_r68um"]
[ext_resource type="Texture2D" uid="uid://bs2fg7mdw4y0j" path="res://resources/graphics/banner.png" id="11_lcuf5"]
[ext_resource type="PackedScene" uid="uid://bbeygppwy0ath" path="res://scenes/Battlefield.tscn" id="11_nw44b"]
[ext_resource type="PackedScene" uid="uid://c65kfclvveb3r" path="res://scenes/Reserve.tscn" id="11_x1o1o"]
[ext_resource type="PackedScene" uid="uid://ddrf8nigaffcl" path="res://scenes/menus/TurnMenu.tscn" id="17_gchri"]
[ext_resource type="PackedScene" uid="uid://chqg8i8ruxuo2" path="res://scenes/Instruction.tscn" id="18_3bhdf"]
[ext_resource type="Script" path="res://scripts/scenes/GameError.gd" id="19_mgppa"]

[node name="Board" type="Node2D"]
script = ExtResource("1_ep6k2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(589, 355)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_tj5ik")

[node name="BackgroundElements" type="Node2D" parent="Background"]

[node name="TreePines" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(199.333, -198.667)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("3_01pxd")

[node name="Vulcano" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(98.6667, -194)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("4_skmt6")

[node name="RocksMountain" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(332.667, -177.333)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("5_y5oof")

[node name="RocksMountain2" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(284.667, -132)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("5_y5oof")

[node name="RocksMountain3" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(258.667, -198.667)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("5_y5oof")

[node name="TreePines2" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(332.667, -66)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("3_01pxd")

[node name="Castle" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(-297.333, -178)
texture = ExtResource("3_7evkv")

[node name="Graveyard" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(-360.667, -172.667)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_30kf3")

[node name="TowerWatch" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(-222, -178)
texture = ExtResource("5_jmmp5")

[node name="ArrowSmall" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(-110, -108.667)
rotation = 1.5708
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("9_bd31o")

[node name="Tent" type="Sprite2D" parent="Background/BackgroundElements"]
position = Vector2(-147.333, -171.333)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("10_r68um")

[node name="Tent2" type="Sprite2D" parent="Background/BackgroundElements"]
position = Vector2(151.333, -172.667)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("10_r68um")

[node name="Banner" type="Sprite2D" parent="Background/BackgroundElements"]
self_modulate = Color(2, 3, 20, 1)
position = Vector2(-50.6667, -156.667)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("11_lcuf5")

[node name="Banner2" type="Sprite2D" parent="Background/BackgroundElements"]
self_modulate = Color(12, 2, 1, 1)
position = Vector2(56, -156)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("11_lcuf5")

[node name="ArrowSmall2" type="Sprite2D" parent="Background/BackgroundElements"]
texture_filter = 2
position = Vector2(115.333, -108.667)
rotation = -1.5708
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("9_bd31o")

[node name="Kingdom" parent="." instance=ExtResource("3_67vue")]
position = Vector2(110, 164)
scale = Vector2(1.5, 1.5)

[node name="Hand" parent="." instance=ExtResource("4_yvn43")]
position = Vector2(224, 164)
scale = Vector2(1.5, 1.5)

[node name="Reserve" parent="." instance=ExtResource("11_x1o1o")]
position = Vector2(336, 164)
scale = Vector2(1.5, 1.5)

[node name="EnemyReserve" parent="." instance=ExtResource("11_x1o1o")]
position = Vector2(790, 164)
scale = Vector2(1.5, 1.5)
side = 1

[node name="Battlefield" parent="." instance=ExtResource("11_nw44b")]
position = Vector2(449, 164)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShuffleHand" parent="CanvasLayer" instance=ExtResource("2_nmow6")]
visible = false

[node name="TurnMenu" parent="CanvasLayer" instance=ExtResource("17_gchri")]
offset_left = 411.0
offset_top = 379.0
offset_right = 866.0
offset_bottom = 480.0
scale = Vector2(0.8, 0.8)

[node name="Instruction" parent="CanvasLayer" instance=ExtResource("18_3bhdf")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -48.0
offset_right = 320.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
text = ""

[node name="Error" parent="CanvasLayer" instance=ExtResource("18_3bhdf")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -98.0
offset_right = 320.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
text = ""
script = ExtResource("19_mgppa")
